Suppress comment form on print

--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -294,3 +294,4 @@ IMG {
 .btn-comment { display: none; }
 .hidden { display: none; }
 .xoops-comment-author { display: none; }
+.commentform { display: none; }
